fix banner on smaller devices

--- a/style.css
+++ b/style.css
@@ -410,6 +410,7 @@ section#approach, #service-intro {
 
 #employee-news p {
     color: #9d9d9c;
+    margin-bottom: 50px;
 }
 
 .center {
